<resources>
    <string name="app_name">My Player</string>
    <string name="song_album">Song Album</string>
    <string name="started">00:00</string>
    <string name="song_name_">Song name</string>
    <string name="all_songs">All Songs</string>
    <string name="favourite">Favorites</string>
    <string name="song_name">Song name</string>
    <string name="song_artist">Song Artist</string>
    <string name="_00_00">00:00</string>
    <string name="world_of_music">World Of Music</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="about_app">About app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="themes">Themes</string>
    <string name="playlists">Playlists</string>
    <string name="my_email">engfred88@gmail.com</string>
    <string name="my_conatct">+256777604872</string>
    <string name="developer">Developed By Engineer Fred @Busitema</string>
    <string name="playlist_name">Playlist name</string>
    <string name="your_name">Your name</string>
    <string name="creator_name">\@Creator name</string>
</resources>