<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeColor"
    tools:context=".AboutActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content">

       <LinearLayout
           android:layout_width="match_parent"
           android:padding="14dp"
           android:gravity="center"
           android:orientation="vertical"
           android:layout_height="match_parent">

           <TextView
               android:id="@+id/version_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="14sp"
               android:text="Version name: "
               android:visibility="gone"
               android:layout_marginBottom="10dp"
               android:textStyle="bold"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/developerTV"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="16sp"
               android:text="@string/developer"
               app:layout_constraintTop_toTopOf="parent" />

           <LinearLayout
               android:layout_width="match_parent"
               android:gravity="center"
               android:layout_marginBottom="10dp"
               android:layout_marginTop="10dp"
               android:layout_height="match_parent"
               tools:ignore="UseCompoundDrawables">
               <TextView
                   android:id="@+id/infoTV"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textSize="15sp"
                   android:text="If you want to provide any feedback, i would love to hear that..."
                   app:layout_constraintTop_toTopOf="parent"
                   tools:ignore="HardcodedText" />

               <ImageView
                   android:layout_marginTop="10dp"
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:layout_marginEnd="15dp"
                   android:src="@drawable/happiness"
                   tools:ignore="ContentDescription" />

           </LinearLayout>

           <LinearLayout
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               tools:ignore="UseCompoundDrawables">

               <ImageView
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:layout_marginEnd="15dp"
                   android:src="@drawable/whatsapp" />

               <TextView
                   android:id="@+id/whatsappNoTV"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/my_conatct" />
           </LinearLayout>

           <LinearLayout
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               tools:ignore="UseCompoundDrawables">

               <ImageView
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:layout_marginEnd="15dp"
                   android:src="@drawable/gmail"
                   tools:ignore="ContentDescription" />

               <TextView
                   android:id="@+id/emailTV"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/my_email" />

           </LinearLayout>
       </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>