<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

   <com.google.android.material.appbar.AppBarLayout
       android:id="@+id/appBarLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       android:theme="@style/Theme.MusicPlayer.AppBarOverlay">

      <androidx.appcompat.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          android:background="?attr/colorPrimary"
          app:popupTheme="@style/Theme.MusicPlayer.PopupOverlay" />

   </com.google.android.material.appbar.AppBarLayout>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintTop_toBottomOf="@id/appBarLayout"
       app:layout_constraintBottom_toTopOf="@id/fragment_container">

      <LinearLayout
          android:id="@+id/header"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          app:layout_constraintTop_toTopOf="parent">

         <com.google.android.material.button.MaterialButton
             android:id="@+id/all_songs_btn"
             android:layout_width="0dp"
             android:clickable="false"
             android:layout_height="match_parent"
             android:layout_weight="1"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:drawableTop="@drawable/baseline_queue_music_24"
             android:text="@string/all_songs"
             android:textColor="?attr/themeColor"
             android:textAllCaps="false"/>

         <com.google.android.material.button.MaterialButton
             android:id="@+id/playlists_btn"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:drawableTop="@drawable/playlist_add_24"
             android:text="@string/playlists"
             android:textColor="?attr/themeColor"
             android:textAllCaps="false"/>

         <com.google.android.material.button.MaterialButton
             android:id="@+id/favorite_btn"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:drawableTop="@drawable/favorite"
             android:text="@string/favourite"
             android:textColor="?attr/themeColor"
             android:textAllCaps="false"/>

      </LinearLayout>

      <TextView
          android:id="@+id/total_songs"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          app:layout_constraintTop_toBottomOf="@id/header"
          app:layout_constraintStart_toStartOf="@id/header"
          android:textStyle="bold"
          android:text="Total songs:" />

      <TextView
          android:id="@+id/total_songs_number"
          android:layout_width="wrap_content"
          android:layout_marginStart="7dp"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/header"
          app:layout_constraintStart_toEndOf="@id/total_songs"
          android:text="0" />

      <View
          android:id="@+id/detailLine"
          android:layout_width="match_parent"
          android:layout_marginTop="9dp"
          android:layout_height="1dp"
          app:layout_constraintTop_toBottomOf="@id/total_songs"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginHorizontal="10dp"
          android:background="#E9EAEC" />

      <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
          android:id="@+id/refreshLayout"
          android:layout_width="match_parent"
          app:layout_constraintTop_toBottomOf="@id/detailLine"
          android:layout_marginTop="100dp"
          android:layout_height="match_parent" >

         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/musicRV"
             android:paddingTop="10dp"
             tools:listitem="@layout/music_item"
             android:layout_width="match_parent"
             app:layout_constraintTop_toBottomOf="@id/detailLine"
             android:layout_height="match_parent"/>

      </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


      <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/floating_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/baseline_shuffle_24"
          app:tint="@color/white"
          app:borderWidth="0dp"
          android:backgroundTint="?attr/themeColor"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_margin="30dp" />

   </androidx.constraintlayout.widget.ConstraintLayout>

   <androidx.fragment.app.FragmentContainerView
       android:id="@+id/fragment_container"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@android:color/transparent"
       tools:layout="@layout/fragment_now_playing"
       android:name="com.engineer.fred.audioplayer.NowPlayingFragment"
       app:layout_constraintBottom_toBottomOf="parent" />

   <TextView
       android:id="@+id/text_info"
       android:visibility="gone"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:textStyle="bold"
       android:text="Grant 'My Player' permission to access your phone storage\n inorder to load songs" />

</androidx.constraintlayout.widget.ConstraintLayout>