<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/playerlayout"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_default"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/back_btnPA"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/white"
            android:src="@drawable/baseline_keyboard_arrow_down_24"
            android:background="@android:color/transparent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="Simply Music"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/add_to_favourites_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/img_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/head"
        app:layout_constraintBottom_toTopOf="@id/song_control_box"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playerImageView"
            android:scaleType="fitCenter"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/head"
            android:src="@drawable/launch_icon" />

        <LinearLayout
            android:id="@+id/song_info"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/playerImageView"
            android:layout_marginTop="13dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/songName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginHorizontal="10dp"
                android:text="@string/song_name"
                android:textSize="17sp"
                android:textStyle="bold"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/artistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginHorizontal="10dp"
                android:text="@string/song_artist"
                android:textSize="16sp"
                android:singleLine="true"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/song_runner_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/img_container"
        app:layout_constraintEnd_toEndOf="@id/img_container"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/song_control_box">

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:indeterminateTint="@color/white"
            android:progressTint="@color/white"
            android:thumbTint="@color/white"
            android:progressBackgroundTint="@color/w_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/song_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="@id/seekBar"
            app:layout_constraintTop_toBottomOf="@id/seekBar"
            android:textColor="@color/white"
            android:text="@string/started"/>

        <TextView
            android:id="@+id/song_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/seekBar"
            app:layout_constraintEnd_toEndOf="@id/seekBar"
            android:textSize="12sp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/white"
            android:text="@string/_00_00"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/song_control_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/lastBox"
        android:gravity="center">

        <ImageButton
            android:id="@+id/PrevBtn"
            android:src="@drawable/android_prev"
            android:layout_width="50dp"
            app:tint="@color/white"
            android:background="@android:color/transparent"
            android:layout_height="50dp"
            tools:ignore="ContentDescription"/>

        <ImageButton
            android:id="@+id/playPauseBtn"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/round_btn"
            android:src="@drawable/play"
            android:layout_marginHorizontal="30dp"
            app:tint="?attr/themeColor"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:src="@drawable/android_next"
            app:tint="@color/white"
            android:background="@android:color/transparent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:ignore="ContentDescription"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/repeat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_repeat_24"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            app:tint="@color/white"
            android:layout_weight="1"
            tools:ignore="ContentDescription,NestedWeights" />

        <ImageButton
            android:id="@+id/eq_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_equalizer_24"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:layout_marginStart="5dp"
            app:tint="@color/white"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_share_24"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            app:tint="@color/white"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>